<resources>
	<string name="app_name">File Explorer</string>
	<string name="settings">Preferences</string>
		<string name="bookmarks">Bookmarks</string>
	<string name="eula_popup_title">Welcome to File Explorer</string>
	<string name="eula_popup_text">Thank you for installing FileExplorer, the free, open source, fast, ad-free file manager for Android! Please accept terms and conditions mentioned at http://fileexplorer.appositedesigns.net/eula</string>
	<string name="eula_accept">I accept</string>
	<string name="eula_decline">Decline</string>
	<string name="action_rename">Rename</string>
	<string name="action_rescan">Rescan Media</string>
	<string name="action_delete">Delete</string>
	<string name="action_cut">Cut</string>
	<string name="action_copy">Copy</string>
	<string name="action_prop">Properties</string>
	<string name="action_unmount">Unmount</string>
	<string name="action_format">Format</string>
	<string name="action_share">Share</string>
	<string name="action_zip">Zip</string>
	<string name="action_unzip">Unzip</string>
	<string name="ringtones">Ringtones</string>
	<string name="notifications">Notifications</string>
	<string name="alarms">Alarms</string>
	<string name="pick_file">Pick a file</string>
    <string name="media_rescan_started">Media rescan started</string>
    <string name="media_rescan_started_desc">New photos and video will soon be added to the gallery. New audio files will appear in music players and ringtone settings</string>
	<string name="msg_delete_success">Path successfully deleted</string>
	<string name="msg_delete_fail">Path could not be deleted</string>
	<string name="empty_folder">This folder is empty</string>
	<string name="no_bookmarks">You have not added any bookmarks yet</string>
	<string name="bookmarks_count">Total of %1$s bookmarks</string>
	<string name="bookmarks_count_0">No bookmarks</string>
	<string name="menu_paste">Paste</string>
	<string name="menu_addfolder">New Folder</string>
	<string name="menu_add_bookmark">Add Bookmark</string>
	<string name="menu_navigate">Navigate to folder &#8230;</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_bookmark">Show in bookmarks</string>
	<string name="menu_exclude_from_media">Exclude folder from media scan</string>
	<string name="yes">Yes</string>
	<string name="actions">Actions</string>
	<string name="no">No</string>
	<string name="not_now">Not Now</string>
	<string name="confirm">Confirm</string>
	<string name="error">Error</string>
	<string name="success">Success</string>
	<string name="abort">Aborted</string>
	<string name="zip">Zip</string>
	<string name="selected_">Selected %1$s</string>
	<string name="cancel">Cancel</string>
	<string name="cancelling">Cancelling&#8230;</string>
	<string name="run_in_background">Run in Background</string>
	<string name="share_via">Share via</string>
	<string name="open_using">Open using</string>
	<string name="copied_toast">%1$s copied</string>
	<string name="cut_toast">%1$s cut</string>
	<string name="rename_toast">%1$s renamed to %2$s</string>
	<string name="zip_success">Selected files(s) have been zipped to %1$s</string>
	<string name="zip_dir_empty">Zip failed. Specified folder is empty.</string>
	<string name="zip_dest_invalid">Zip file destination was invalid. Please check the destination in Menu &gt; and try again</string>
	<string name="zip_failed">One or more selected file(s) could not be zipped. Please verify zip file name and try again</string>
	<string name="zip_in_progress">Files are being zipped. Please wait.</string>
	<string name="zip_aborted">Zip was aborted.</string>
	<string name="zip_dialog">Create Zip in %1$s</string>
	<string name="enter_zip_file_name">Enter zip file name</string>
	<string name="zip_abort_partial">Zip operation was aborted. However, one or more files were copied to %1$s</string>
	<string name="copy_aborted">Copy was aborted.</string>
	<string name="copy_abort_partial">Copy operation was aborted. However, one or more files were copied.</string>
	<string name="unzip_progress_param">Unzipping files &#8230; [%1$s]</string>
	<string name="unzip_progress">Unzipping files &#8230;</string>
	<string name="unzip_failed_dest_file">Unzip failed. Please choose a different destination folder and try again</string>
	<string name="unzip_failed_generic">Could not unzip files</string>
	<string name="unzip_success">Successfully unzipped %1$s paths</string>
	<string name="unzip_abort_partial">Unzip operation was aborted. However, one or more files were unzipped to %1$s</string>
	<string name="unzip_aborted">Unzip was aborted</string>
	<string name="unzip_destination">Select destination</string>
	<string name="move_aborted">Move was aborted.</string>
	<string name="move_abort_partial">Move operation was aborted. However, one or more files were moved.</string>
	<string name="access_denied">Access Denied</string>
	<string name="cant_open_dir">%1$s is a protected directory. You will require root access on your device to open and browse this directory</string>
	<string name="add_bookmark_prompt">Add Bookmark</string>
	<string name="add_bookmark_prompt_hint">Enter directory path eg. /sdcard/foo</string>
	<string name="goto_path_hint">Enter directory path eg. /sdcard/foo</string>
	<string name="goto_path">Navigate to</string>
	<string name="path_not_exist">Sorry. The directory could not be found</string>
	<string name="confirm_app_restart">Do you wish to restart app and apply new theme?</string>
	<string name="confirm_delete">Are you sure you want to delete %1$s ?</string>
	<string name="confirm_remove_bookmark">Are you sure you want to remove bookmark for %1$s ?</string>
	<string name="confirm_paste_text">Are you sure you want to paste %1$s ?</string>
	<string name="delete_failed">%1$s could not be deleted</string>
	<string name="rename_failed">%1$s could not be renamed</string>
	<string name="enter_new_name">Enter new name</string>
	<string name="rename_dialog_title">Rename %1$s</string>
	<string name="properties_for">Properties: %1$s</string>
	<string name="deleting_path">Deleting path %1$s &#8230;</string>
	<string name="copying_path">Copying %1$s . Please wait &#8230;</string>
	<string name="moving_path">Moving %1$s .Please wait&#8230;</string>
	<string name="create_folder">Create Folder</string>
	<string name="enter_folder_name">Enter folder name</string>
	<string name="querying_filesys">Querying File System. Please wait.</string>
	<string name="copy_complete">Copy complete.</string>
	<string name="move_complete">Resource successfully moved to new location</string>
	<string name="generic_operation_failed">Could not complete operation</string>
	<string name="pref_cat_view">View Options</string>
	<string name="pref_cat_display">Display Options</string>
	<string name="pref_cat_display_summary">Set theme, sort order and other view options</string>
	<string name="pref_cat_misc">Miscellaneous</string>
	<string name="pref_cat_about">About FileExplorer</string>
	<string name="pref_cat_contact">Contact</string>
	<string name="pref_cat_share">Share</string>
	<string name="pref_cat_misc_summary">About the developer, contact info, terms and conditions</string>
		<string name="pref_cat_nav">Navigation Options</string>
	<string name="pref_cat_nav_summary">Configure navigation features like back button and quick actions popups</string>
	<string name="pref_home_folder">Start up folder</string>
	<string name="pref_home_folder_desc">File explorer will open this folder at when started</string>
	<string name="pref_showhidden">Show hidden paths</string>
	<string name="pref_showhidden_on">Hidden files and folders are shown</string>
	<string name="pref_showhidden_off">Hidden files and folders are omitted</string>
		<string name="pref_use_back">Back button navigation</string>
	<string name="pref_use_back_on">Uses phone back button navigate up to parent folder</string>
	<string name="pref_use_back_off">Do not use phone back button to navigate within app</string>
	<string name="pref_quickactions">Use Quick Actions</string>
	<string name="pref_quickactions_on">Enable legacy quick actions context menu</string>
	<string name="pref_quickactions_off">Do not quick actions</string>
	<string name="pref_show_dir_sizes">Show folder sizes</string>
	<string name="pref_show_dir_sizes_on_desc">Folder sizes are rolled up</string>
	<string name="pref_show_dir_sizes_off_desc">Folder sizes are not shown</string>
	<string name="pref_show_sysfiles">Show protected folders</string>
	<string name="pref_show_sysfiles_on">Protected system folders are shown</string>
	<string name="pref_show_sysfiles_off">Protected system folders are hidden</string>
	<string name="pref_cat_sorting">Sorting</string>
	<string name="pref_dirsfirst">Show directories on top</string>
	<string name="pref_dirsfirst_on_desc">Will show directories on top</string>
	<string name="pref_dirsfirst_off_desc">Will not give preference to directories in sorting</string>
	<string name="pref_sort_field">Sort Field</string>
	<string name="pref_sort_field_desc">Attribute on which path should be sorted</string>
	<string name="pref_sort_dir">Sort Direction</string>
	<string name="pref_theme">Theme</string>
	<string name="pref_theme_desc">Select app theme</string>
	<string name="pref_theme_title">Choose Theme</string>
	<string name="pref_cat_geeky">Geeky Stuff</string>
	<string name="pref_cat_zip">Compression</string>
	<string name="pref_cat_sdcard">External Storage</string>
	<string name="pref_cat_geeky_summary">Compression and other geeky functionality</string>
	<string name="pref_zipenable">Zip &amp; Unzip</string>
	<string name="pref_zipenable_on">Show options to zip &amp; unzip</string>
	<string name="pref_zipenable_off">Zip &amp; unzip options are hidden</string>
	<string name="pref_usezipfolder">Use Common Zip folder</string>
	<string name="pref_usezipfolder_on">Move .zip files created using FileExplorer to a common folder</string>
	<string name="pref_usezipfolder_off">Prompt for destination folder each time files are zipped</string>
	<string name="pref_zip_location">Zip Folder Location</string>
	<string name="pref_zip_location_desc">Zipped files and folders will be kept at this location</string>
	<string name="pref_show_sdcard_options">SD Card Options</string>
	<string name="pref_show_sdcard_options_on">Enable advanced options like media rescan</string>
	<string name="pref_show_sdcard_options_off">SD Card Options are hidden</string>
	<string name="pref_media_rescan">Rescan Media</string>
	<string name="pref_media_rescan_desc">Scans external storage for newly added media (photos, audio, video)</string>
	<string name="pref_rate">Rate FileExplorer</string>
	<string name="pref_rate_desc">Rate and write a review on the Google Play Store</string>
	<string name="pref_share">Tell your friends</string>
	<string name="pref_share_desc">Love FileExplorer? Share it with your friends</string>
	<string name="share_text">I have been using FileExplorer and thought you might like it too. Heres the download link: https://play.google.com/store/apps/details?id=net.appositedesigns.fileexplorer</string>
	<string name="pref_app_version">Version</string>
		<string name="pref_twitter">Follow us on Twitter</string>
		<string name="pref_twitter_desc">FileExplorer</string>
	<string name="pref_terms">Terms &amp; Conditions</string>
	<string name="pref_terms_desc">Read the terms &amp; conditions</string>
	<string name="pref_website">Developer Website</string>
	<string name="pref_website_desc">Click to visit my website</string>
	<string name="pref_feedback">Send feedback</string>
	<string name="pref_feedback_desc">Drop me an email. Feedback is most welcome!</string>
	<string name="filepath_is">Path: %1$s </string>
	<string name="mtime_is">Last Modified on %1$s</string>
	<string name="size_is">Size: %1$s</string>
	<string name="total_capacity">Total Capacity: %1$s</string>
	<string name="free_space">Free Space: %1$s</string>
</resources>