<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="net.appositedesigns.fileexplorer.SettingsActivity$ViewPreferences"
        android:summary="@string/pref_cat_display_summary"
        android:title="@string/pref_cat_display"	/>
    <header
        android:fragment="net.appositedesigns.fileexplorer.SettingsActivity$NavigationPreferences"
        android:summary="@string/pref_cat_nav_summary"
        android:title="@string/pref_cat_nav" />
    
    <header
        android:fragment="net.appositedesigns.fileexplorer.SettingsActivity$GeekyPreferences"
        android:title="@string/pref_cat_geeky"
        android:summary="@string/pref_cat_geeky_summary" />
    
        <header
        android:fragment="net.appositedesigns.fileexplorer.SettingsActivity$AboutPreferences"
        android:title="@string/pref_cat_about"
        android:summary="@string/pref_cat_about_summary" />

</preference-headers>