<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/menu_rescan"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_rescan"/>
        
    
     <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
     
        <item
        android:id="@+id/menu_copy"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_copy"/>
        
            <item
        android:id="@+id/menu_cut"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_cut"/>
            
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/action_delete"/>
    
    
    <item
        android:id="@+id/menu_rename"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_rename"/>
    <item
        android:id="@+id/menu_zip"
        android:showAsAction="never|withText"
        android:title="@string/action_zip"/>
    <item
        android:id="@+id/menu_props"
        android:showAsAction="ifRoom"
        android:title="@string/action_prop"/>

</menu>